// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`NavigationBar should match snapshot when user is logged in 1`] = `
<header
  className="header"
>
  <Link
    to="/"
  >
    <Route
      path={
        Array [
          "/login",
          "/movies/:id",
        ]
      }
      render={[Function]}
    />
  </Link>
  <h1>
    Welcome 
    Marge
  </h1>
  <Link
    to="/"
  >
    <button
      className="logout-button"
      onClick={[Function]}
    >
      Log Out
    </button>
  </Link>
</header>
`;

exports[`NavigationBar should match the NavigationBar Snapshot when no one is logged in 1`] = `
<header
  className="header"
>
  <Link
    to="/"
  >
    <Route
      path={
        Array [
          "/login",
          "/movies/:id",
        ]
      }
      render={[Function]}
    />
  </Link>
  <Link
    to="/login"
  >
    <button
      className="login-button"
    >
      Log In
    </button>
  </Link>
</header>
`;
